# pandapower-web

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  start.sh  stop.sh
backend/: README.md  pyproject.toml  run.py
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: powerflow.py
backend/app/core/: examples_service.py  powerflow_service.py
backend/app/middleware/: __init__.py  logging.py
backend/app/schemas/: __init__.py  powerflow.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/api/: powerflow.js
frontend/src/components/: CalculationForm.jsx  CalculationLog.jsx  ErrorBoundary.jsx  ExampleCases.jsx  FileUpload.jsx  LanguageSwitcher.jsx  NetworkSummary.jsx  ResultTable.jsx  ResultsDisplay.jsx
frontend/src/constants/: powerflow.js
frontend/src/locales/: en.json  zh.json
frontend/src/utils/: logger.js
