[project]
name = "pandapower-web-backend"
version = "0.1.0"
description = "Web interface for pandapower power flow calculation"
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pandapower>=2.14.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "numba>=0.59.0",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
